force-app/main/default/objects/Resume__c/Resume__c.object-meta.xml
<CustomObject>
    <label>Resume</label>
    <nameField>
        <label>Resume Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resumes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>