force-app/main/default/objects/Resume__c/fields/GitHub__c.field-meta.xml
<CustomField>
    <fullName>GitHub__c</fullName>
    <label>GitHub</label>
    <length>40</length>
    <type>Text</type>
</CustomField>