force-app/main/default/objects/Resume__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <inlineHelpText>Target Title</inlineHelpText>
    <label>Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>