force-app/main/default/objects/Resume__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Address</type>
</CustomField>