force-app/main/default/objects/Resume__c/fields/Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Location_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>