force-app/main/default/objects/Resume__c/fields/Location_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>Location_CountryCode__c</fullName>
    <label>CountryCode</label>
    <length>2</length>
    <type>Text</type>
</CustomField>