force-app/main/default/objects/Resume__c/fields/Location_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Location_PostalCode__c</fullName>
    <label>PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>