force-app/main/default/objects/Resume__c/fields/Location_Region__c.field-meta.xml
<CustomField>
    <fullName>Location_Region__c</fullName>
    <inlineHelpText>State, Province, etc.</inlineHelpText>
    <label>Region</label>
    <length>40</length>
    <type>Text</type>
</CustomField>