force-app/main/default/objects/Resume__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Candidate Name</description>
    <label>Candidate Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>