force-app/main/default/objects/Resume__c/fields/Trailblazer__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer__c</fullName>
    <label>Trailblazer</label>
    <length>40</length>
    <type>Text</type>
</CustomField>