force-app/main/default/objects/Resume__c/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <label>Twitter</label>
    <length>40</length>
    <type>Text</type>
</CustomField>